Revision history for Perl extension Apache::GzipChain.

0.01  Thu Oct 16 10:36:50 1997
	- original version; created by h2xs 1.18
